force-app/main/default/objects/Campaign/fields/ACH_Merchant_Id__c.field-meta.xml
<CustomField>
    <fullName>ACH_Merchant_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The unique merchant ID# provided to your organization by GiveCentral for processing electronic withdrawals from checking and savings accounts.</inlineHelpText>
    <label>ACH Merchant ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Merchant_Id__c.Type__c</field>
            <operation>equals</operation>
            <value>ACH</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Merchant_Id__c</referenceTo>
    <relationshipLabel>Campaigns (ACH Merchant Id)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>