force-app/main/default/objects/Campaign/fields/gc_event_id__c.field-meta.xml
<CustomField>
    <fullName>gc_event_id__c</fullName>
    <description>Event ID number will be assigned by GiveCentral and is not editable.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique event ID number will be assigned by GiveCentral for this campaign and is not editable.</inlineHelpText>
    <label>GC Event ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>