force-app/main/default/objects/Campaign/fields/minimumAmounts__c.field-meta.xml
<CustomField>
    <fullName>minimumAmounts__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>A suggested minimum donation amount that can be displayed on available donor-facing forms for this campaign.</inlineHelpText>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>