force-app/main/default/objects/Campaign/fields/Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Group__c</fullName>
    <label>Reporting Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not categorized</fullName>
                <default>true</default>
                <label>Not categorized</label>
            </value>
            <value>
                <fullName>Type A</fullName>
            </value>
            <value>
                <fullName>Type B</fullName>
            </value>
            <value>
                <fullName>Type C</fullName>
            </value>
            <value>
                <fullName>Type D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>