force-app/main/default/objects/Campaign/fields/suggestedAmount__c.field-meta.xml
<CustomField>
    <fullName>suggestedAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>A suggested donation amount for this campaign that will appear on certain donor-facing forms.</inlineHelpText>
    <label>Suggested Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>