force-app/main/default/objects/Campaign/fields/Sync_Flag__c.field-meta.xml
<CustomField>
    <fullName>Sync_Flag__c</fullName>
    <label>Sync Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>