force-app/main/default/objects/Campaign/validationRules/startdate.validationRule-meta.xml
<ValidationRule>
    <fullName>startdate</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(StartDate)</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>This is a required field. Please enter today&#39;s date or a date in the future.</errorMessage>
</ValidationRule>