force-app/main/default/objects/Campaign/validationRules/startdatecheck.validationRule-meta.xml
<ValidationRule>
    <fullName>startdatecheck</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate  &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Event start date cannot be backdated. Please enter today&#39;s date or a date in the future on which contributions to this campaign will be accepted.</errorMessage>
</ValidationRule>